--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,23 @@ const { description,title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/code-circle-2.svg" />
 		<meta name="generator" content={Astro.generator} />
+		
+			<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://mi-portafolio-sandy.vercel.app/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
+		<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
+		<meta property="og:image" content="https://raw.githubusercontent.com/Criptamas/Mi-portafolio/maste/src/images/juanrojasomg.png">
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="mi-portafolio-sandy.vercel.app">
+		<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app/">
+		<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
+		<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
+		<meta name="twitter:image" content="https://raw.githubusercontent.com/Criptamas/Mi-portafolio/maste/src/images/juanrojasomg.png">
+
+		
 		<title>{title}</title>
 		<ViewTransitions/>
 	</head>
