--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { description,title } = Astro.props;
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 		<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-		<meta property="og:image" content="https://raw.githubusercontent.com/Criptamas/Mi-portafolio/maste/src/images/juanrojasomg.png">
+		<meta property="og:image" content="./images/juanrojasomg.png">
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -35,7 +35,7 @@ const { description,title } = Astro.props;
 		<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app/">
 		<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 		<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-		<meta name="twitter:image" content="https://raw.githubusercontent.com/Criptamas/Mi-portafolio/maste/src/images/juanrojasomg.png">
+		<meta name="twitter:image" content="./images/juanrojasomg.png">
 
 		
 		<title>{title}</title>
