--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,22 +22,24 @@ const { description,title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/code-circle-2.svg" />
 		<meta name="generator" content={Astro.generator} />
 		
-			<!-- Facebook Meta Tags -->
-		<meta property="og:url" content="https://mi-portafolio-sandy.vercel.app/">
-		<meta property="og:type" content="website">
-		<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
-		<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-		<meta property="og:image" content="./images/juanrojasomg.png">
+			<!-- HTML Meta Tags -->
+	<title>Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web</title>
+	<meta name="description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
 
-		<!-- Twitter Meta Tags -->
-		<meta name="twitter:card" content="summary_large_image">
-		<meta property="twitter:domain" content="mi-portafolio-sandy.vercel.app">
-		<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app/">
-		<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
-		<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-		<meta name="twitter:image" content="./images/juanrojasomg.png">
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://mi-portafolio-sandy.vercel.app">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
+	<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
+	<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/ef147a86-d699-4419-8465-0511a9f1d4a2.png?token=VrtlGA1ezAST9TYpCAW_s3CN098Rlm8eK50faG3I9Ks&height=953&width=1035&expires=33258765473">
 
-		
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="mi-portafolio-sandy.vercel.app">
+	<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app">
+	<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
+	<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
+	<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/ef147a86-d699-4419-8465-0511a9f1d4a2.png?token=VrtlGA1ezAST9TYpCAW_s3CN098Rlm8eK50faG3I9Ks&height=953&width=1035&expires=33258765473">
 		<title>{title}</title>
 		<ViewTransitions/>
 	</head>
