--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 import Badge from '../components/Badge.astro'
 import LinkedinIcon from '../components/icons/LinkedinIcon.astro';
-import GithubIcon from '../components/icons/GithubIcon.astro';
 import MailIcon from '../components/icons/MailIcon.astro';
 import Socialref from '../components/Socialref.astro';
 import Experience from '../components/Experience.astro';
@@ -15,7 +14,7 @@ import SobreMi from '../components/SobreMi.astro';
 ---
 
 <Layout 
-title="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web"
+title="Portafolio Juan Rojas Desarrollador y Programador Web"
 description='Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.'
 >
 	<main class="px-4">
