--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { description,title } = Astro.props;
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 	<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-	<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/ef147a86-d699-4419-8465-0511a9f1d4a2.png?token=VrtlGA1ezAST9TYpCAW_s3CN098Rlm8eK50faG3I9Ks&height=953&width=1035&expires=33258765473">
+	<meta property="og:image" content="https://raw.githubusercontent.com/Criptamas/miPortafolio/main/src/images/juanrojasomg.png">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -39,7 +39,7 @@ const { description,title } = Astro.props;
 	<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app">
 	<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 	<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-	<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/ef147a86-d699-4419-8465-0511a9f1d4a2.png?token=VrtlGA1ezAST9TYpCAW_s3CN098Rlm8eK50faG3I9Ks&height=953&width=1035&expires=33258765473">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/Criptamas/miPortafolio/main/src/images/juanrojasomg.png">
 		<title>{title}</title>
 		<ViewTransitions/>
 	</head>
