--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -1,3 +1,7 @@
+---
+import ImgSobreMi from "./ImgSobreMi.astro"
+---
+
 
 <article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
   <div
@@ -22,6 +26,5 @@
     </p>
   </div>
 
-  <img width="200" height="200" src="https://github.com/Criptamas/miPortafolio/blob/maste/src/images/juanrojas(1).png" alt={"Juan Rojas"} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-
+ <ImgSobreMi/>
 </article>
