change image url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ description='Curriculum de Juan Rojas. Programador en Javascript y Python. Manej
 		<SectionContainer class="py-44 pb-22">
 			<img 
 			class="rounded-full size-12 mb-4"
-			src="/public/images/juanrojas.png" alt="Juan Rojas foto">
+			src="https://raw.githubusercontent.com/Criptamas/repo-juan-rojas/main/public/images/juanrojas.png" alt="Juan Rojas foto">
 		
 
 		<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">Hola Soy Juan Rojas <div class="flex justify-center items-center"> <a href="https://www.linkedin.com/in/criptamas/" rel="noreferrer" target="_blank"><Badge>Disponible para trabajar</Badge></a>  </div> </h1> 
