Change img url in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { description,title } = Astro.props;
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 	<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-	<meta property="og:image" content="/public/images/rojasjuan.png">
+	<meta property="og:image" content="https://raw.githubusercontent.com/Criptamas/repo-juan-rojas/main/public/images/rojasjuan.png">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -39,7 +39,7 @@ const { description,title } = Astro.props;
 	<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app">
 	<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 	<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
-	<meta name="twitter:image" content="/public/images/rojasjuan.png">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/Criptamas/repo-juan-rojas/main/public/images/rojasjuan.png">
 		<title>{title}</title>
 		<ViewTransitions/>
 	</head>
