Add OpenGraph in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,17 +26,17 @@ const { description,title } = Astro.props;
 	<title>Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web</title>
 	<meta name="description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
 
-	<!-- Facebook Meta Tags -->
-	<meta property="og:url" content="https://mi-portafolio-sandy.vercel.app">
+			<!-- Facebook Meta OP -->
+	<meta property="og:url" content="https://portafolio-juan-rojas.vercel.app/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 	<meta property="og:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
 	<meta property="og:image" content="https://raw.githubusercontent.com/Criptamas/repo-juan-rojas/main/public/images/rojasjuan.png">
 
-	<!-- Twitter Meta Tags -->
+	<!-- Twitter Meta  OP-->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta property="twitter:domain" content="mi-portafolio-sandy.vercel.app">
-	<meta property="twitter:url" content="https://mi-portafolio-sandy.vercel.app">
+	<meta property="twitter:domain" content="portafolio-juan-rojas.vercel.app">
+	<meta property="twitter:url" content="https://portafolio-juan-rojas.vercel.app/">
 	<meta name="twitter:title" content="Portafolio Juan Rojas Desarrollador FrontEnd y Programador Web">
 	<meta name="twitter:description" content="Curriculum de Juan Rojas. Programador en Javascript y Python. Manejo de ReactJS y Astro.">
 	<meta name="twitter:image" content="https://raw.githubusercontent.com/Criptamas/repo-juan-rojas/main/public/images/rojasjuan.png">
